# MotorCostTracker

./: .gitignore  CONTRIBUTING.md  README.md  configs.example.json  configs.json  himalayan.csv  motoregis.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_data_engine.py  test_maintenance.py  test_validators.py
veiculos/: etios_16.json  example_vehicle.json  himalayan_22.csv  himalayan_22.json
